# NexusSuite

./: 00_MASTER_PROJECT_OVERVIEW.md
alphaedge/: .env.example  .gitignore  CHECKLIST.md  README.md  docker-compose.prod.yml  docker-compose.yml
alphaedge/.github/workflows/: ci.yml  (+1 more)
alphaedge/backend/: Dockerfile  pyproject.toml
alphaedge/backend/alembic/: env.py
alphaedge/backend/app/: config.py  database.py  main.py
alphaedge/backend/app/api/: deps.py
alphaedge/backend/app/api/v1/: router.py
alphaedge/backend/app/api/v1/endpoints/: alerts.py  auth.py  health.py  market_data.py  orders.py  portfolios.py  strategies.py  watchlists.py
alphaedge/backend/app/models/: __init__.py  alert.py  order.py  portfolio.py  strategy.py  user.py  watchlist.py
alphaedge/backend/app/repositories/: base.py
alphaedge/backend/app/schemas/: __init__.py  alert.py  order.py  portfolio.py  response.py  strategy.py  user.py  watchlist.py
alphaedge/backend/app/services/: market_data.py
alphaedge/backend/app/tasks/: __init__.py  alert_tasks.py  strategy_tasks.py
alphaedge/backend/app/websockets/: __init__.py  handlers.py
alphaedge/backend/tests/: conftest.py
alphaedge/backend/tests/integration/: test_alerts.py  test_orders.py  test_strategies.py  test_watchlists.py
alphaedge/backend/tests/unit/: test_auth.py  test_config.py  test_jwt.py  test_portfolios.py  test_schemas.py  test_websocket_manager.py
alphaedge/docs/: mkdocs.yml
alphaedge/frontend/: Dockerfile  package.json  tailwind.config.js
alphaedge/nginx/: nginx.conf
alphaedge/scripts/: seed.py  setup.sh
(+19 files in other folders)
